Fixed issue where the typeeffect was offcentered and borking the whole site when ran

--- a/src/styles/components/type-effect.css
+++ b/src/styles/components/type-effect.css
@@ -3,6 +3,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  top: 0;
+  left: 0;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
